--- a/.github/workflows/mysql.yml
+++ b/.github/workflows/mysql.yml
@@ -2,11 +2,12 @@ name: MySQL Build
 on: [push, pull_request]
 jobs:
   build:
-    name: PHP ${{ matrix.php-versions }} - Windows
-    runs-on: windows-latest
+    name: PHP ${{ matrix.php-versions }} - ${{ matrix.operating-system }}
+    runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: false
       matrix:
+        operating-system: [ubuntu-latest, windows-latest] #, macOS-latest
         php-versions: ['7.1', '7.2', '7.3', '7.4']
     env:
       DB_DRIVER: mysql
@@ -38,8 +39,9 @@ jobs:
         uses: shivammathur/setup-php@v1 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, dom, fileinfo
+          extensions: mbstring, dom, fileinfo, gd
           coverage: xdebug #optional
+          tools: pecl
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
