--- a/.github/workflows/sqlite.yml
+++ b/.github/workflows/sqlite.yml
@@ -2,11 +2,12 @@ name: Sqlite Build
 on: [push, pull_request]
 jobs:
   build:
-    name: PHP ${{ matrix.php-versions }} - Windows
-    runs-on: windows-latest
+    name: PHP ${{ matrix.php-versions }} - ${{ matrix.operating-system }}
+    runs-on: ${{ matrix.operating-system }}
     strategy:
       fail-fast: false
       matrix:
+        operating-system: [ubuntu-latest, windows-latest] #, macOS-latest
         php-versions: ['7.1', '7.2', '7.3', '7.4']
     env:
       DB_DRIVER: sqlite
