--- a/.github/workflows/sqlite.yml
+++ b/.github/workflows/sqlite.yml
@@ -28,9 +28,8 @@ jobs:
         uses: shivammathur/setup-php@v1 #https://github.com/shivammathur/setup-php
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: mbstring, dom, fileinfo, gd
+          extensions: mbstring, dom, fileinfo
           coverage: xdebug #optional
-          tools: pecl
       - name: Get composer cache directory
         id: composer-cache
         run: echo "::set-output name=dir::$(composer config cache-files-dir)"
