--- a/app/sprinkles/core/composer.json
+++ b/app/sprinkles/core/composer.json
@@ -44,7 +44,7 @@
         "slim/csrf": "^0.8",
         "slim/slim": "3.12.2",
         "slim/twig-view": "^1.2",
-        "symfony/event-dispatcher": "^4.0",
+        "symfony/event-dispatcher": "^3.0 | ^4.0",
         "symfony/http-foundation": "*",
         "twig/twig": "^1.18",
         "userfrosting/assets": "^5.0.4",
