--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Ignores text editor metadata
 *.komodoproject
-.php_cs.cache
 .vscode
 
 # Ignores Mac metadata.  You can configure this globally if you use a Mac: http://islegend.com/development/setting-global-gitignore-mac-windows/
@@ -72,6 +71,10 @@ app/assets/*
 # Ignore Vagrant & Homestead VM
 vagrant/Homestead/
 .vagrant/*
+
+# Ignore dev utils cache
+.phpunit.result.cache
+.php_cs.cache
 
 # Igore npm lockfile
 build/package-lock.json
