--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.13",
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "^7.5 | ^8.5",
         "mockery/mockery": "^1.2",
         "league/factory-muffin": "^3.0",
         "league/factory-muffin-faker": "^2.0"
